# Insert_Game_Name_Here

./: .gitignore  CMakeLists.txt  README.md  Video.cpp  Video.hpp  main.cpp  utility.cpp  utility.hpp
Bullet/: BlackholeBullet.cpp  BlackholeBullet.hpp  Bullet.cpp  Bullet.hpp  FireballBullet.cpp  FireballBullet.hpp
Enemy/: Agis.cpp  Agis.hpp  Coins.cpp  Coins.hpp  Enemy.cpp  Enemy.hpp  Knight.cpp  Knight.hpp  Zombie.cpp  Zombie.hpp
Engine/: Angle.cpp  Angle.hpp  AnimSprite.cpp  AnimSprite.hpp  Collision.cpp  Collision.hpp  FadeBorder.hpp  GameEngine.cpp  GameEngine.hpp  Group.cpp  Group.hpp  IObject.cpp  IObject.hpp  IScene.cpp  IScene.hpp  MouseState.cpp  MouseState.hpp  Point.hpp  Resources.cpp  Sprite.cpp  Sprite.hpp
Maps/: DungeonMap.cpp  DungeonMap.hpp  Map.cpp  Map.hpp  Room.cpp  Room.hpp
Mechanics/: Buffable.cpp  Buffable.hpp  InteractableSprite.cpp  InteractableSprite.hpp
Resource/maps/: 1-1.txt  1-2.txt  1-3.txt  1-4.txt  1-5.txt  1-6.txt  3-3.txt  3-4.txt  before_final_boss.txt  final_boss.txt  shop.txt
Resource/textfiles/: credits.txt  scoreboard.txt
Scenes/: CutScene.cpp  CutScene.hpp  CutScene2.cpp  CutScene2.hpp  CutScene3.cpp  CutScene3.hpp  IntroScene.cpp  IntroScene.hpp  MenuScene.cpp  MenuScene.h  MenuScene.hpp  PlayScene.cpp  PlayScene.hpp  RainEffect.hpp  ScoreScene.cpp  ScoreScene.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SettingsScene.cpp  SettingsScene.hpp
Sprites/: Chest.cpp  Chest.hpp  FakePanda.cpp  FakePanda.hpp  Player.cpp  Player.hpp  ShopDisplay.cpp  ShopDisplay.hpp
UI/: Image.cpp  Image.hpp  ImageButton.cpp  ImageButton.hpp  Label.cpp  Label.hpp  Screen.cpp  Screen.hpp  Slider.cpp  Slider.hpp  TextButton.cpp  TextButton.hpp  Textbox.cpp  Textbox.hpp  Video.cpp  Video.hpp
Weapons/: BlackholeWeapon.cpp  BlackholeWeapon.hpp  DefaultWeapon.cpp  DefaultWeapon.hpp  LaserWeapon.cpp  LaserWeapon.hpp  Lightsaber.cpp  Lightsaber.hpp  MagicStaff.cpp  MagicStaff.hpp  SwordSlashEffect.cpp  SwordSlashEffect.hpp  SwordWeapon.cpp  SwordWeapon.hpp  Weapon.cpp  Weapon.hpp
